# src/docs/swagger.yaml
@@ -35,6 +35,28 @@ info:
   version: "1.0"
 paths:
   /orders:
+    get:
+      consumes:
+      - application/json
+      description: Retrieve a list of all orders
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/models.Order'
+            type: array
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/payload.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/payload.ErrorResponse'
+      summary: Get all orders
+      tags:
+      - Orders
     post:
       consumes:
       - application/json
